# geom2d-robot-envs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
geom2drobotenvs/: __init__.py  concepts.py  object_types.py  skills.py  structs.py  utils.py
geom2drobotenvs/envs/: __init__.py  base_env.py  shelf_world.py  three_table_env.py
scripts/: create_reset_gif.py  demo.py  plan.py
src/geom2drobotenvs/: __init__.py  concepts.py  object_types.py  skills.py  structs.py  utils.py
src/geom2drobotenvs/envs/: base_env.py  obstruction_2d_env.py  three_table_env.py
tests/: conftest.py  test_skills.py  test_utils.py
tests/envs/: test_obstruction_2d_env.py  test_shelf_world.py  test_three_table_env.py
