[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "geom2drobotenvs"
version = "0.1.0"
description = " Robot enviroments modelled with 2D geoms."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
   "matplotlib==3.8.4",
   "numpy==1.26.4",
   "tomsgeoms2d@git+https://github.com/tomsilver/toms-geoms-2d.git",
   "relational_structs@git+https://github.com/tomsilver/relational-structs.git",
   "tomsutils@git+https://github.com/tomsilver/toms-utils.git",
   "gym==0.26.0",
   "imageio[ffmpeg]",
]

[project.optional-dependencies]
develop = [
    "black",
    "docformatter",
    "isort",
    "mypy",
    "pylint>=2.14.5",
    "pytest-pylint>=0.18.0",
    "pytest>=7.2.2",
]

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
py_version = 310
profile = "black"
multi_line_output = 2
skip_glob = ["venv/*"]
split_on_trailing_comma = true

[tool.mypy]
strict_equality = true
disallow_untyped_calls = true
warn_unreachable = true
exclude = ["venv/*"]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
]
ignore_missing_imports = true
